incorporating local ollama logic

--- a/prototyping.ipynb
+++ b/prototyping.ipynb
@@ -13,205 +13,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'question': 'Will Senator John Fetterman cease caucusing with the Democrats before July 1, 2025?',\n",
-       "  'description': '[Fetterman says he won’t resign, gets support from McCormick as article blowback continues](https://www.pennlive.com/news/2025/05/fetterman-says-he-wont-resign-gets-support-from-mccormick-as-article-blowback-continues.html) | [An isolated, angry Fetterman is yet another challenge for Democrats](https://www.washingtonpost.com/politics/2025/05/16/john-fetterman-senate-relationships/)',\n",
-       "  'resolution_criteria': 'This question resolves as **Yes** if, before July 1, 2025, John Fetterman ceases caucusing with the [Senate Democrats](https://www.democrats.senate.gov/about-senate-dems/our-caucus) for any reason, whether because he switches parties, resigns, or any other reason.',\n",
-       "  'fine_print': ''}]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded prompts from: preprocess.yaml\n"
-     ]
-    }
-   ],
-   "source": [
-    "from libs.preprocess import get_all_wiki_queries, search_wiki_rank"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "queries, drivers = get_all_wiki_queries(qs[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "relevant_pages = search_wiki_rank(queries, drivers, qs[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['List of United States senators who switched parties']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "relevant_pages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Precipitation levels in the River Avon catchment area during spring and early summer 2025',\n",
-       " 'Temperature trends and evaporation rates in Somerset leading up to July 2025',\n",
-       " 'Water abstraction rates upstream of Bath Destructor Bridge for agriculture and municipal use',\n",
-       " 'Land use and catchment soil moisture conditions affecting runoff into the River Avon',\n",
-       " 'Reservoir management and flood control interventions impacting river flow',\n",
-       " 'Occurrence of extreme weather events (e.g., droughts or heavy storms) prior to July 1, 2025',\n",
-       " 'Regional climate anomalies influencing rainfall distribution in south-west England']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval(a).get('drivers_list')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ollama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7272727.27\n",
-      "baa21b33b8ae47522ac684c709889e48afd86468\n"
+      "Once upon a time, in a small village nestled in the rolling hills of Tuscany, there was a tiny shop called \"La Luna\" (The Moon). The shop was owned by an elderly woman named Sophia, who was known throughout the village for her extraordinary talent: she could weave the most exquisite and magical fabrics.\n",
+      "\n",
+      "Sophia's shop was a place where dreams came alive. She would spend hours spinning threads of silver and gold, creating fabrics that shimmered like the moon and glowed with an otherworldly light. People from all over the region would come to visit Sophia, seeking not only beautiful fabrics but also guidance and wisdom.\n",
+      "\n",
+      "One day, a young girl named Luna wandered into La Luna, searching for a special gift for her mother's birthday. As she browsed the shelves, her eyes landed on a magnificent fabric that seemed to radiate an ethereal glow. It was as if the moon itself had descended upon Sophia's loom and woven its magic into the threads.\n",
+      "\n",
+      "Sophia noticed Luna's fascination with the fabric and approached her with a warm smile. \"Ah, you've found the Moonlight Fabric,\" she said. \"It's a rare and precious material, imbued with the essence of the night sky.\"\n",
+      "\n",
+      "Luna was enchanted by the fabric and begged Sophia to teach her how to weave it herself. Sophia agreed, but warned Luna that the fabric came with a price: whoever wove it would be bound to the moon for one night each year, forced to dance under its silvery light.\n",
+      "\n",
+      "Luna didn't hesitate; she was determined to master the Moonlight Fabric and share its magic with her mother. And so, Sophia began to teach Luna the ancient art of weaving, passing down secrets and techniques that had been passed down through generations of weavers.\n",
+      "\n",
+      "As Luna learned, she discovered that the fabric was not just a material but a key to unlocking the mysteries of the universe. She wove threads of stardust and moonbeams into her creations, imbuing them with the essence of the night sky.\n",
+      "\n",
+      "Years went by, and Luna became renowned throughout the land for her exquisite fabrics and her ability to weave magic into every thread. And whenever the full moon rose high in the sky, Luna would don a cloak woven from the Moonlight Fabric and dance under its silvery light, feeling the universe's secrets unfolding before her like a celestial tapestry.\n",
+      "\n",
+      "The villagers would whisper that on those nights, Sophia's shop was filled with an otherworldly glow, as if the moon itself had descended upon La Luna, weaving its magic into the very fabric of reality. And Luna, now an accomplished weaver and guardian of the Moonlight Fabric, would smile knowingly, for she knew that the secrets of the universe were hidden within every thread, waiting to be unraveled by those with the courage to weave their own magic.\n",
+      "\n",
+      "And so, the story of La Luna and the Moonlight Fabric became a legend, passed down through generations, reminding all who heard it that even in the most ordinary-seeming places, magic can be found, woven into the very fabric of reality.\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "print(os.getenv('OPENAI_04MINI_BALANCE'))\n",
-    "print(os.getenv('METACULUS_TOKEN'))"
+    "response = ollama.chat( \n",
+    "    model='llama3.2',\n",
+    "    options={\"temperature\":0},\n",
+    "    messages=[\n",
+    "        {\n",
+    "            'role': 'system',\n",
+    "            'content': 'You are a helpful assistant that answers questions.'\n",
+    "        },\n",
+    "        {\n",
+    "            'role': 'user',\n",
+    "            'content': 'Tell me a story'\n",
+    "        }\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(response['message']['content'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-05-29 12:48:28.059 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n"
+      "<think>\n",
+      "Okay, the user is asking for the capital of France. Let me think. I know that France is a country in Europe. Its capital is a city that's well-known. Wait, is it Paris? Yeah, I'm pretty sure Paris is the capital. Let me double-check. France's capital is indeed Paris. So the answer should be Paris. I need to present this in JSON format as per the user's request. The key should be \"capital\" and the value \"Paris\". Make sure it's correct and straightforward.\n",
+      "</think>\n",
+      "\n",
+      "{\"capital\": \"Paris\"}\n"
      ]
     }
    ],
    "source": [
-    "import forecasting_tools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'summary': 'The question seeks to determine whether the water level of the River Avon at Bath Destructor Bridge in Somerset, England, will be low, normal, or high on July 1, 2025. The background indicates recent forecasts of below normal or low river levels across most of the UK in May, except for the south-west of England and southern Wales, suggesting regional variability in water availability. The resolution depends on assessing hydrological conditions at a specific time and location, considering regional climatic and environmental factors leading up to the target date.',\n",
-       " 'factor_consideration': \"To assess the water level state at the River Avon on July 1, 2025, multiple interconnected factors must be considered. First, precipitation patterns in the months preceding July, particularly in the south-west of England, will directly influence river flow and recharge rates. Seasonal rainfall variability, including any prolonged drought or wet spells, will affect river volume. Second, temperature trends and evaporation rates in the area will influence water loss and soil moisture, thereby impacting runoff into the river. Third, upstream water usage and abstraction for agriculture, industry, or municipal supply could reduce river levels. Fourth, land use and catchment characteristics, such as soil permeability and vegetation cover, will determine how rainfall translates into river flow. Additionally, potential interventions like reservoir releases or flood management practices could alter water levels. Finally, broader climatic trends and anomalies, such as unusual heatwaves or storms, may serve as catalysts or inhibitors for deviations from normal levels. The interplay of these hydrological, climatic, and human factors will collectively drive the river's state on the specified date.\",\n",
-       " 'drivers_list': ['Precipitation levels in the River Avon catchment area during spring and early summer 2025',\n",
-       "  'Temperature trends and evaporation rates in Somerset leading up to July 2025',\n",
-       "  'Water abstraction rates upstream of Bath Destructor Bridge for agriculture and municipal use',\n",
-       "  'Land use and catchment soil moisture conditions affecting runoff into the River Avon',\n",
-       "  'Reservoir management and flood control interventions impacting river flow',\n",
-       "  'Occurrence of extreme weather events (e.g., droughts or heavy storms) prior to July 1, 2025',\n",
-       "  'Regional climate anomalies influencing rainfall distribution in south-west England']}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Precipitation levels in the River Avon catchment area during spring and early summer 2025',\n",
-       " 'Temperature trends and evaporation rates in Somerset leading up to July 2025',\n",
-       " 'Water abstraction rates upstream of Bath Destructor Bridge for agriculture and municipal use',\n",
-       " 'Land use and catchment soil moisture conditions affecting runoff into the River Avon',\n",
-       " 'Reservoir management and flood control interventions impacting river flow',\n",
-       " 'Occurrence of extreme weather events (e.g., droughts or heavy storms) prior to July 1, 2025',\n",
-       " 'Regional climate anomalies influencing rainfall distribution in south-west England']"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from pydantic import BaseModel\n",
+    "response = ollama.chat(\n",
+    "    model='qwen3:4b',\n",
+    "    messages=[\n",
+    "        {\n",
+    "            'role': 'system',\n",
+    "            'content': 'You are a helpful assistant that answers questions. Respond in JSON format'\n",
+    "        },\n",
+    "        {\n",
+    "            'role': 'user',\n",
+    "            'content': 'what is the capital of France?'\n",
+    "        }\n",
+    "    ],\n",
+    ")\n",
     "\n",
-    "class DecomposedDriversResponse(BaseModel):\n",
-    "    summary: str\n",
-    "    factor_consideration: str\n",
-    "    drivers_list: list[str]\n",
-    "\n",
-    "\n",
-    "DecomposedDriversResponse.model_validate_json(a).drivers_list\n"
+    "print(response['message']['content'])"
    ]
   }
  ],
