editing ollama prompting

--- a/prototyping.ipynb
+++ b/prototyping.ipynb
@@ -13,96 +13,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ollama"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Once upon a time, in a small village nestled in the rolling hills of Tuscany, there was a tiny shop called \"La Luna\" (The Moon). The shop was owned by an elderly woman named Sophia, who was known throughout the village for her extraordinary talent: she could weave the most exquisite and magical fabrics.\n",
-      "\n",
-      "Sophia's shop was a place where dreams came alive. She would spend hours spinning threads of silver and gold, creating fabrics that shimmered like the moon and glowed with an otherworldly light. People from all over the region would come to visit Sophia, seeking not only beautiful fabrics but also guidance and wisdom.\n",
-      "\n",
-      "One day, a young girl named Luna wandered into La Luna, searching for a special gift for her mother's birthday. As she browsed the shelves, her eyes landed on a magnificent fabric that seemed to radiate an ethereal glow. It was as if the moon itself had descended upon Sophia's loom and woven its magic into the threads.\n",
-      "\n",
-      "Sophia noticed Luna's fascination with the fabric and approached her with a warm smile. \"Ah, you've found the Moonlight Fabric,\" she said. \"It's a rare and precious material, imbued with the essence of the night sky.\"\n",
-      "\n",
-      "Luna was enchanted by the fabric and begged Sophia to teach her how to weave it herself. Sophia agreed, but warned Luna that the fabric came with a price: whoever wove it would be bound to the moon for one night each year, forced to dance under its silvery light.\n",
-      "\n",
-      "Luna didn't hesitate; she was determined to master the Moonlight Fabric and share its magic with her mother. And so, Sophia began to teach Luna the ancient art of weaving, passing down secrets and techniques that had been passed down through generations of weavers.\n",
-      "\n",
-      "As Luna learned, she discovered that the fabric was not just a material but a key to unlocking the mysteries of the universe. She wove threads of stardust and moonbeams into her creations, imbuing them with the essence of the night sky.\n",
-      "\n",
-      "Years went by, and Luna became renowned throughout the land for her exquisite fabrics and her ability to weave magic into every thread. And whenever the full moon rose high in the sky, Luna would don a cloak woven from the Moonlight Fabric and dance under its silvery light, feeling the universe's secrets unfolding before her like a celestial tapestry.\n",
-      "\n",
-      "The villagers would whisper that on those nights, Sophia's shop was filled with an otherworldly glow, as if the moon itself had descended upon La Luna, weaving its magic into the very fabric of reality. And Luna, now an accomplished weaver and guardian of the Moonlight Fabric, would smile knowingly, for she knew that the secrets of the universe were hidden within every thread, waiting to be unraveled by those with the courage to weave their own magic.\n",
-      "\n",
-      "And so, the story of La Luna and the Moonlight Fabric became a legend, passed down through generations, reminding all who heard it that even in the most ordinary-seeming places, magic can be found, woven into the very fabric of reality.\n"
+      "Loaded prompts from: preprocess.yaml\n",
+      "Generating queries for question: For Q2 2025, how many banks will be listed on the FDIC's Failed Bank List?\n",
+      "Using model: ollama/qwen3:1.7b for completion.\n",
+      "Decomposed drivers: ['Number of banks closing due to financial distress from economic pressures (e.g., Trump tariffs)', 'Impact of regulatory changes on lending standards and bailouts', 'Market trends such as loan defaults or liquidity crises', \"FDIC's process for identifying and closing banks with specific date criteria\"]\n",
+      "Using model: ollama/qwen3:1.7b for completion.\n"
      ]
-    }
-   ],
-   "source": [
-    "response = ollama.chat( \n",
-    "    model='llama3.2',\n",
-    "    options={\"temperature\":0},\n",
-    "    messages=[\n",
-    "        {\n",
-    "            'role': 'system',\n",
-    "            'content': 'You are a helpful assistant that answers questions.'\n",
-    "        },\n",
-    "        {\n",
-    "            'role': 'user',\n",
-    "            'content': 'Tell me a story'\n",
-    "        }\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "print(response['message']['content'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<think>\n",
-      "Okay, the user is asking for the capital of France. Let me think. I know that France is a country in Europe. Its capital is a city that's well-known. Wait, is it Paris? Yeah, I'm pretty sure Paris is the capital. Let me double-check. France's capital is indeed Paris. So the answer should be Paris. I need to present this in JSON format as per the user's request. The key should be \"capital\" and the value \"Paris\". Make sure it's correct and straightforward.\n",
-      "</think>\n",
-      "\n",
-      "{\"capital\": \"Paris\"}\n"
+     "ename": "TypeError",
+     "evalue": "Cannot instantiate typing.Union",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlibs\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpreprocess\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_all_wiki_queries\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m queries, drivers = \u001b[43mget_all_wiki_queries\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqs\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/JM_RAND/PRGS/Dissertation/metaculus/code/libs/preprocess.py:108\u001b[39m, in \u001b[36mget_all_wiki_queries\u001b[39m\u001b[34m(question_metadata)\u001b[39m\n\u001b[32m    106\u001b[39m drivers = decompose_drivers(question_metadata)\n\u001b[32m    107\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mDecomposed drivers:\u001b[39m\u001b[33m\"\u001b[39m, drivers)\n\u001b[32m--> \u001b[39m\u001b[32m108\u001b[39m queries = \u001b[43mquestion_to_queries\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquestion_metadata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    109\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mGenerated queries:\u001b[39m\u001b[33m\"\u001b[39m, queries)\n\u001b[32m    111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m drivers:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/JM_RAND/PRGS/Dissertation/metaculus/code/libs/preprocess.py:54\u001b[39m, in \u001b[36mquestion_to_queries\u001b[39m\u001b[34m(question_metadata)\u001b[39m\n\u001b[32m     48\u001b[39m service = CompletionsService()\n\u001b[32m     49\u001b[39m response = service.get_completion(\n\u001b[32m     50\u001b[39m     messages=messages,\n\u001b[32m     51\u001b[39m     model_name=\u001b[33m\"\u001b[39m\u001b[33mqwen3:1.7b\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     52\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m54\u001b[39m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43;01mQueriesResponse\u001b[39;49;00m\u001b[43m(\u001b[49m\u001b[43mBaseModel\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     55\u001b[39m \u001b[43m    \u001b[49m\u001b[43minformation_need_summary\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\n\u001b[32m     56\u001b[39m \u001b[43m    \u001b[49m\u001b[43mscratchpad_query_brainstrom\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mUnion\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/JM_RAND/PRGS/Dissertation/metaculus/code/libs/preprocess.py:56\u001b[39m, in \u001b[36mquestion_to_queries.<locals>.QueriesResponse\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     54\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mQueriesResponse\u001b[39;00m(BaseModel):\n\u001b[32m     55\u001b[39m     information_need_summary: \u001b[38;5;28mstr\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m56\u001b[39m     scratchpad_query_brainstrom: \u001b[43mUnion\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     57\u001b[39m     wikipedia_queries: \u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/typing.py:560\u001b[39m, in \u001b[36m_SpecialForm.__call__\u001b[39m\u001b[34m(self, *args, **kwds)\u001b[39m\n\u001b[32m    559\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, *args, **kwds):\n\u001b[32m--> \u001b[39m\u001b[32m560\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCannot instantiate \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mTypeError\u001b[39m: Cannot instantiate typing.Union"
      ]
     }
    ],
    "source": [
-    "response = ollama.chat(\n",
-    "    model='qwen3:4b',\n",
-    "    messages=[\n",
-    "        {\n",
-    "            'role': 'system',\n",
-    "            'content': 'You are a helpful assistant that answers questions. Respond in JSON format'\n",
-    "        },\n",
-    "        {\n",
-    "            'role': 'user',\n",
-    "            'content': 'what is the capital of France?'\n",
-    "        }\n",
-    "    ],\n",
-    ")\n",
+    "from libs.preprocess import get_all_wiki_queries\n",
     "\n",
-    "print(response['message']['content'])"
+    "queries, drivers = get_all_wiki_queries(qs[0])"
    ]
   }
  ],
